--- a/src/Card/Card.scss
+++ b/src/Card/Card.scss
@@ -4,9 +4,11 @@
   max-width: 350px;
   box-shadow: 0 1px 5px #eee;
   transition: all 0.1s ease-in;
+  color: #000;
   cursor: pointer;
 
-  &:hover {
+  &:hover,
+  &:focus {
     transform: scale(1.1);
   }
 
